--- a/src/main/resources/static/CreateAPI.html
+++ b/src/main/resources/static/CreateAPI.html
@@ -356,7 +356,7 @@
                                            	<label style="float: left;cursor: pointer;font-weight: normal;margin: 5px 0 0 10px;"><input type="checkbox" id="passBody"  onclick="passBodyFun()"> 透传Body</label>
                                             <label style="float: left;cursor: pointer;font-weight: normal;margin: 5px 0 0 10px;" title="Body参数可以被Query获取,当Content-Type=application/x-www-form-urlencoded时有效,既query可以获取URL中的参数也可以获取body里面的参数"><input type="checkbox" id="bodyAsQuery" checked="checked"> Body参数可以被Query获取</label>
                                             <a class="console-button console-button-green console-button-tiny addParams" style="width: 85px">
-                                                <i ng-if="!!icon" class="icon-add"></i>
+                                                <i ng-if="!!icon" class="icon-add">增加一条</i>
                                                 <span>
                                                     <span class="ng-scope ng-binding">增加一条</span>
                                                 </span>
